# grpc-c-

./: CMakeLists.txt
certificates/: Makefile  client.crt  client.h  client.key  client_key.h  server.crt  server.h  server.key  server_key.h  trusted_chain.crt  trusted_chain.h
client/: CMakeLists.txt
client/src/: main.cpp
proto/: hello_world.proto
server-asynchronous/: CMakeLists.txt
server-asynchronous/src/: main.cpp
server-callback/: CMakeLists.txt
server-callback/src/: hello_world_service.cpp  hello_world_service.h  main.cpp  server_reactor.cpp  server_reactor.h
server-synchronous/: CMakeLists.txt
server-synchronous/src/: hello_world_service.cpp  hello_world_service.h  main.cpp
utilities/: auth_token.cpp  auth_token.h  base64.cpp  base64.h  crypto.cpp  crypto.h
